syntax = "proto3";
package auction.auction;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "auction/auction/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "auction/x/auction/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/auction/auction/params";
  }
  // Queries a list of Auctions items.
	rpc Auctions(QueryAuctionsRequest) returns (QueryAuctionsResponse) {
		option (google.api.http).get = "/auction/auction/auctions";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryAuctionsRequest {
}

message QueryAuctionsResponse {
  string name = 1;
  uint64 startPrice = 2;
  uint64 minPriceStep = 3;
  bool ended = 4;
}

// this line is used by starport scaffolding # 3
