syntax = "proto3";
package auction.auction;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "auction/x/auction/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateAuction(MsgCreateAuction) returns (MsgCreateAuctionResponse);
  rpc PlaceBid(MsgPlaceBid) returns (MsgPlaceBidResponse);
  rpc FinalizeAuction(MsgFinalizeAuction) returns (MsgFinalizeAuctionResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateAuction {
  string creator = 1;
  string name = 2;
  string startPrice = 3;
  uint64 duration = 4;
}

message MsgCreateAuctionResponse {
  uint64 id = 1;
}

message MsgPlaceBid {
  string creator = 1;
  uint64 auctionId = 2;
  string bidPrice = 3;
}

message MsgPlaceBidResponse {
  uint64 id = 1;
}

message MsgFinalizeAuction {
  string creator = 1;
  uint64 auctionId = 2;
}

message MsgFinalizeAuctionResponse {
  uint64 id = 1;
  string finalPrice = 2;
}

// this line is used by starport scaffolding # proto/tx/message
